--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="frame-container">
         <div class="frame">
             <img src="photo2.jpg">
-            <p class="photo-title">late night</p>
+            <p class="photo-title">moment</p>
         </div>
     </div>
 
