--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap" rel="stylesheet"> 
 
     <link href="styles/shared.css" rel="stylesheet" />
     <title>Photo Gallery</title>
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <h1>Blair Willems Photography</h1>
+        <h1>My Photography</h1>
     </header>
     <h3></h3>
     <div class="frame-container">
