--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 <body>
     <header>
         <h1>My Photography</h1>
+        <p class="description">A collection of photographs by Blair Willems, taken between 2010 and 2021.</p>
     </header>
-    <h3></h3>
+    <main>
     <div class="frame-container">
         <div class="frame">
             <img src="photo2.jpg">
@@ -36,6 +37,7 @@
             <p class="photo-title">south</p>
         </div>
     </div>
+    </main>
 </body>
 
 </html>
