--- a/index.html
+++ b/index.html
@@ -19,21 +19,43 @@
     <main>
     <div class="frame-container">
         <div class="frame">
-            <img src="photo2.jpg">
+            <img src="images/photo2.jpg">
             <p class="photo-title">moment</p>
         </div>
     </div>
 
     <div class="frame-container">
         <div class="frame">
-            <img src="photo1.jpg">
+            <img src="images/photo4.jpg">
+            <p class="photo-title">moo</p>
+        </div>
+    </div>
+
+
+    <div class="frame-container">
+        <div class="frame">
+            <img src="images/photo6.jpg">
+            <p class="photo-title">shards</p>
+        </div>
+    </div>
+
+    <div class="frame-container">
+        <div class="frame">
+            <img src="images/photo7.jpg">
+            <p class="photo-title">south</p>
+        </div>
+    </div>
+
+    <div class="frame-container">
+        <div class="frame">
+            <img src="images/photo1.jpg">
             <p class="photo-title">paris</p>
         </div>
     </div>
 
     <div class="frame-container">
         <div class="frame">
-            <img src="photo3.jpg">
+            <img src="images/photo3.jpg">
             <p class="photo-title">south</p>
         </div>
     </div>
