--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap" rel="stylesheet"> 
 
     <link href="styles/shared.css" rel="stylesheet" />
-    <title>Photo Gallery</title>
+    <title>Photos</title>
 </head>
 
 <body>
