--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <h1>My Photography</h1>
+        <h1>Photos</h1>
         <p class="description">A collection of photographs by Blair Willems, taken between 2010 and 2021.</p>
     </header>
     <main>
